2024.03.07 개선
- 의존성 보안 업데이트
- static class를 bean으로 전환
- 소스에서 키 제거
- favicon 추가
- 사소한 경고 제거